# shit_engine

./: Cargo.toml  README.md
src/: image_analyzer.rs  lib.rs
src/image_analyzer/: better_call_zone.rs  color.rs  pixel.rs  point.rs
src/image_analyzer/color/: color_from.rs  conversion.rs  hsv.rs  rgb.rs
src/image_analyzer/color/conversion/: hsv.rs  rgb.rs
