[package]
name = "shit_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
serde = { version = "1.0.200", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]